--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -16,12 +16,12 @@
 	aside#statistics {
 		order: 3;
 	}
-	article#gameContainer {
+	main#appContainer {
 		position:static;
 		flex-grow:2;
 		order: 2;
 	}
-	article#gameContainer::before {
+	main#appContainer::before {
 		display: none;
 	}
 	body {
@@ -70,14 +70,17 @@ body, input {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	justify-content: space-between;
 	align-content: stretch;
 	align-items: stretch;
 	height: 100%;
+	background:#fff;
+	width:100%;
+	overflow-y: auto;
+	transition: all 0.5s;
 }
 
-#status { 
-	display:none;
+.hide { 
+	display:none !important;
 }
 
 header {
@@ -108,29 +111,22 @@ h2 {
 }
 
 /* error feedback */
-#gameContainer.error .letterButton {
+#appContainer.error .letterButton {
 	animation: error 0.5s ease-in-out;
 	-webkit-animation: error 0.5s ease-in-out;
 }
 /* warning feedback */
-#gameContainer.warning .letterButton {
+#appContainer.warning .letterButton {
 	animation: warning 0.5s ease-in-out;
 	-webkit-animation: warning 0.5s ease-in-out;
 }
 /* success feedback */
-#gameContainer.success .letterButton {
+#appContainer.success .letterButton {
 	animation: success 0.5s ease-in-out;
 	-webkit-animation: success 0.5s ease-in-out;
 }
 
-/* layout styles */
-
-#gameContainer {
-	background:#fff;
-	width:100%;
-	overflow-y: auto;
-	transition: all 0.5s;
-}
+/* nav styles */
 
 nav ul {
 	margin: 0.5em 0; 
@@ -160,8 +156,23 @@ nav a[class*=" icon-"]:before {
 	margin-right: 1.25em;
 	color: #999;
  }
+ 
+/* layout styles */
 
-#gameHeader {
+#gameContainer {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-content: stretch;
+	align-items: stretch;
+	height: 100%;
+	background:#fff;
+	width:100%;
+	transition: all 0.5s;
+}
+
+#appHeader {
 	flex: 0 0 auto;
 	display: flex;
 	flex-direction: row;
@@ -172,7 +183,7 @@ nav a[class*=" icon-"]:before {
 	font-size:0.8em;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.25);
 }
-#gameTitle {
+#appTitle {
 	display: inline-block;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 }
@@ -420,28 +431,6 @@ nav a[class*=" icon-"]:before {
 @-webkit-keyframes rotate {
 	100% {
 		transform: rotate(360deg);
-	}
-}
-
-@keyframes flyoff-right {
-	100% {
-		transform: translateX(100%);
-	}
-}
-@-webkit-keyframes flyoff-right {
-	100% {
-		transform: translateX(100%);
-	}
-}
-
-@keyframes flyoff-left {
-	100% {
-		transform: translateX(-100%);
-	}
-}
-@-webkit-keyframes flyoff-left {
-	100% {
-		transform: translateX(-100%);
 	}
 }
 
