--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -45,6 +45,18 @@
 }
 
 a, button, input, .toggle { -webkit-tap-highlight-color: transparent; }
+.fadeout  {
+	animation: fadeout 0.25s;
+	-webkit-animation: fadeout 0.25s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
+}
+.fadein  {
+	animation: fadein 0.25s;
+	-webkit-animation: fadein 0.25s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
+}
 
 html {
 	height: 100%;
@@ -112,18 +124,36 @@ h2 {
 
 /* error feedback */
 #gameContainer.error .letterButton {
-	animation: error 0.5s ease-in-out;
-	-webkit-animation: error 0.5s ease-in-out;
+	animation: error-border 0.5s ease-in-out;
+	-webkit-animation: error-border 0.5s ease-in-out;
+}
+#gameContainer.error #wordAttempt {
+	animation: error-text 0.25s;
+	-webkit-animation: error-text 0.25s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
 }
 /* warning feedback */
 #gameContainer.warning .letterButton {
-	animation: warning 0.5s ease-in-out;
-	-webkit-animation: warning 0.5s ease-in-out;
+	animation: warning-border 0.5s ease-in-out;
+	-webkit-animation: warning-border 0.5s ease-in-out;
+}
+#gameContainer.warning #wordAttempt {
+	animation: warning-text 0.25s;
+	-webkit-animation: warning-text 0.25s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
 }
 /* success feedback */
 #gameContainer.success .letterButton {
-	animation: success 0.5s ease-in-out;
-	-webkit-animation: success 0.5s ease-in-out;
+	animation: success-border 0.5s ease-in-out;
+	-webkit-animation: success-border 0.5s ease-in-out;
+}
+#gameContainer.success #wordAttempt {
+	animation: success-text 0.25s;
+	-webkit-animation: success-text 0.25s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
 }
 
 /* nav styles */
@@ -246,18 +276,14 @@ nav a[class*=" icon-"]:before {
 	text-overflow: ellipsis;
 }
 #clearWordAttempt {
-	display: none;
+	opacity: 0;
+	display: inline-block;
 	color: #3498db;
 	transition: color 0.25s;
 	font-weight: 300;
 }
 #clearWordAttempt:hover, #clearWordAttempt:active {
 	color: #197abb;
-}
-#clearWordAttempt.visible {
-	display: inline-block;
-	animation: fadein 0.25s;
-	-webkit-animation: fadein 0.25s;
 }
 
 #letterContainer {
@@ -313,19 +339,27 @@ nav a[class*=" icon-"]:before {
 	color: #f0f0f0;
 }
 
-#shuffler {
+.shuffleContainer {
 	align-self: center;
 	flex: 1 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 0.25em 0.5em;
+}
+#shuffler {
+	display: inline-block;
+	padding: 0.5em 1em;
+	text-decoration: none;
+	background: #f0f0f0;
+	border-radius: 8px;
 	color: #3498db;
-	transition: color 0.25s;
+	transition: color 0.25s, background 0.25s;
 	font-weight: 300;
 }
 #shuffler:hover, #shuffler:active {
 	color: #197abb;
+	background: #f9f9f9;
 }
 
 #turnSubmit {
@@ -423,6 +457,23 @@ nav a[class*=" icon-"]:before {
 	}
 }
 
+@keyframes fadeout {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+@-webkit-keyframes fadeout {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
 @keyframes rotate {
 	100% {
 		transform: rotate(360deg);
@@ -434,35 +485,68 @@ nav a[class*=" icon-"]:before {
 	}
 }
 
-@keyframes error {
+@keyframes error-border  {
 	50% {
 		border-color:#c72c1c;
 	}
 }
-@-webkit-keyframes error {
+@-webkit-keyframes error-border  {
 	50% {
 		border-color:#c72c1c;
 	}
 }
 
-@keyframes warning {
+@keyframes warning-border  {
 	50% {
 		border-color:#c6de22;
 	}
 }
-@-webkit-keyframes warning {
+@-webkit-keyframes warning-border  {
 	50% {
 		border-color:#c6dd22;
 	}
 }
 
-@keyframes success {
+@keyframes success-border  {
 	50% {
 		border-color:#078e40;
 	}
 }
-@-webkit-keyframes success {
+@-webkit-keyframes success-border  {
 	50% {
 		border-color:#078e40;
+	}
+}
+
+@keyframes error-text  {
+	100% {
+		color:#c72c1c;
+	}
+}
+@-webkit-keyframes error-text  {
+	100% {
+		color:#c72c1c;
+	}
+}
+
+@keyframes warning-text  {
+	100% {
+		color:#c6de22;
+	}
+}
+@-webkit-keyframes warning-text  {
+	100% {
+		color:#c6dd22;
+	}
+}
+
+@keyframes success-text  {
+	100% {
+		color:#078e40;
+	}
+}
+@-webkit-keyframes success-text  {
+	100% {
+		color:#078e40;
 	}
 }
