--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -1,4 +1,4 @@
-a, button, input, .toggle { -webkit-tap-highlight-color: transparent; }
+a, button, input, .toggle { -webkit-tap-highlight-color: rgba(255,255,255,0.2); }
 .fadeout  {
 	animation: fadeout 0.25s;
 	-webkit-animation: fadeout 0.25s;
@@ -78,8 +78,8 @@ h2 {
 
 /* error feedback */
 #gameContainer.error .letterButton {
-	animation: error-border 0.5s ease-in-out;
-	-webkit-animation: error-border 0.5s ease-in-out;
+	animation: error-border 0.25s ease-in-out;
+	-webkit-animation: error-border 0.25s ease-in-out;
 }
 #gameContainer.error #wordAttempt {
 	animation: error-text 0.25s;
@@ -89,8 +89,8 @@ h2 {
 }
 /* warning feedback */
 #gameContainer.warning .letterButton {
-	animation: warning-border 0.5s ease-in-out;
-	-webkit-animation: warning-border 0.5s ease-in-out;
+	animation: warning-border 0.25s ease-in-out;
+	-webkit-animation: warning-border 0.25s ease-in-out;
 }
 #gameContainer.warning #wordAttempt {
 	animation: warning-text 0.25s;
@@ -100,8 +100,8 @@ h2 {
 }
 /* success feedback */
 #gameContainer.success .letterButton {
-	animation: success-border 0.5s ease-in-out;
-	-webkit-animation: success-border 0.5s ease-in-out;
+	animation: success-border 0.25s ease-in-out;
+	-webkit-animation: success-border 0.25s ease-in-out;
 }
 #gameContainer.success #wordAttempt {
 	animation: success-text 0.25s;
@@ -122,7 +122,7 @@ nav ul {
 	font-weight: 300;
 }
 nav li {	
-	transition: background 0.5s;
+	transition: background 0.25s;
 }
 nav li:hover {
 	background-color:#f6f6f6;
@@ -308,16 +308,12 @@ nav a[class*=" icon-"]:before {
 	background: #f0f0f0;
 	border-radius: 8px;
 	color: #3498db;
-	transition: color 0.25s, background 0.25s;
+	transition: color 0.5s, background 0.5s;
 	font-weight: 300;
 }
-#shuffler:hover {
-	color: #197abb;
-	background: #f9f9f9;
-}
 #shuffler:active {
-	animation: active-shuffle 1s;
-	-webkit-animation: active-shuffle 1s;
+	animation: active-shuffle 0.5s;
+	-webkit-animation: active-shuffle 0.5s;
 }
 
 #turnSubmit {
@@ -348,8 +344,8 @@ nav a[class*=" icon-"]:before {
 	border-radius: 0.5em;
 }
 #submitWord:focus {
-	animation: active-button 1s;
-	-webkit-animation: active-button 1s;
+	animation: active-button 0.25s;
+	-webkit-animation: active-button 0.25s;
 }
 
 #gameSummaryContents {
