--- a/src/style/fontello.css
+++ b/src/style/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?55835627');
-  src: url('../font/fontello.eot?55835627#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?55835627') format('woff'),
-       url('../font/fontello.ttf?55835627') format('truetype'),
-       url('../font/fontello.svg?55835627#fontello') format('svg');
+  src: url('font/fontello.eot?55835627');
+  src: url('font/fontello.eot?55835627#iefix') format('embedded-opentype'),
+       url('font/fontello.woff?55835627') format('woff'),
+       url('font/fontello.ttf?55835627') format('truetype'),
+       url('font/fontello.svg?55835627#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?55835627#fontello') format('svg');
+    src: url('font/fontello.svg?55835627#fontello') format('svg');
   }
 }
 */
