--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -266,6 +266,7 @@ nav a[class*=" icon-"]:before {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 }
 .letterButton {
 	width: 2em;
