Move some game stat data rendering to cardPartRenderer
- add cardPartRenderer (with draw() function)
- modify currentWordsManager and previousWordsManager to use
cardPartRenderer
- add new styles to card.css
- remove some styles from wordScramble.css
- include new cardPartRenderer in index.html and makefile

--- a/src/style/card.css
+++ b/src/style/card.css
@@ -17,3 +17,22 @@
 .card-contents {
 	padding:0.5em;
 }
+.card-part {
+  margin: 0.15em 0;
+  padding: 0.15em 0;
+  border-top: 1px dotted #e0e0e0;
+}
+.card-part:first-child {
+  border-top: 0;
+}
+.card-part-title {
+  color:#888;
+	font-weight: 300;
+}
+.card-part-contents {
+  background: #fff;
+	color:#111;
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+}
