--- a/src/style/drawer.css
+++ b/src/style/drawer.css
@@ -11,17 +11,17 @@
 	transition: all 0.5s;
 	overflow-y: auto;
 }
-.drawer[data-slide-in-dir="right"] {
-	transform: translateX(-100%);
-	left: 0;
-}
-.drawer[data-slide-in-dir="left"] {
-	transform: translateX(100%);
-	right: 0;
-}
 .drawer-title {
 	background:#eee;
 	color:#555;
+}
+.drawer[data-drawer-side="left"] {
+	transform: translateX(-200%);
+	left: 0;
+}
+.drawer[data-drawer-side="right"] {
+	transform: translateX(200%);
+	right: 0;
 }
 .drawer.visible {
 	opacity: 1;
@@ -34,45 +34,16 @@
 	top: 0;
 	left: 0;
 	height: 100%;
-	width: 0%;
-	background: rgba(0,0,0,0);
-	z-index: 10;
-	transition: background .2s;
-}
-.drawer.visible ~ .main::before {
 	width: 100%;
 	background: rgba(0,0,0,0.5);
+	z-index: 10;
+	transition: all .2s;
 }
-.drawer.flyoff ~ .main::before {
+.drawer.hidden ~ .drawer.hidden ~ .main::before {	
 	background: rgba(0,0,0,0);
+	height: 0;
 }
-.drawer[data-slide-in-dir="right"].flyoff {
-	animation: flyoff-left 0.25s;
-	-webkit-animation: flyoff-left 0.25s;
-}
-.drawer[data-slide-in-dir="left"].flyoff {
-	animation: flyoff-right 0.25s;
-	-webkit-animation: flyoff-right 0.25s;
-}
-
-@keyframes flyoff-left {
-	100% {
-		transform: translateX(-100%);
-	}
-}
-@-webkit-keyframes flyoff-left {
-	100% {
-		transform: translateX(-100%);
-	}
-}
-
-@keyframes flyoff-right {
-	100% {
-		transform: translateX(100%);
-	}
-}
-@-webkit-keyframes flyoff-right {
-	100% {
-		transform: translateX(100%);
-	}
+.drawer.visible ~ .main::before {	
+	background: rgba(0,0,0,0.5);
+	height: 100%;
 }
