--- a/src/style/large-screen.css
+++ b/src/style/large-screen.css
@@ -6,8 +6,8 @@
 		box-shadow:0 0 4px -2px rgba(0,0,0,0.5);
 		flex-grow:1;
 	}
-	aside.drawer[data-slide-in-dir="right"],
-	aside.drawer[data-slide-in-dir="left"] {
+	aside.drawer[data-drawer-side="right"],
+	aside.drawer[data-drawer-side="left"] {
 		transform: translateX(0);
 	}
 	aside#menu {
